[package]
name = "actix-surrealdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1"}#, features = ["openssl"] }
env_logger = "0.10.0"
log = "0.4.19"
# openssl = { version = "0.10.55", features = ["v110"] }
serde = { version = "1.0.164", features = ["derive"] }
surrealdb = "1.0.0-beta.9"
